umol-models-graph/tests/mol_parsing/snapshots/compliance__mol_parsing__store_summary_snapshot@parse_mol_chebi_ChEBI_132030.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: summary
---
atom_count: 37
bond_count: 40
sum_formula: C26H5NO5-1
graph6: "d__??CGB??_A?@?`??G?@??O??B?????COC?M??????_GC_@?G????G????????@????G????G???G_????O????@?????G?????_????O?????C"
