umol-models-graph/tests/mol_parsing/snapshots/compliance__mol_parsing__store_summary_snapshot@parse_mol_chebi_ChEBI_57618.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: summary
---
atom_count: 31
bond_count: 33
sum_formula: C17N4O9P-2
graph6: "^qG[?@@?oO?_?A?@_C??_??_?@??????C??@G??G??C???G???G???_????G?????????????w????G"
