umol-models-graph/tests/mol_parsing/snapshots/compliance__mol_parsing__store_summary_snapshot@parse_mol_chem3d_TEP.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: summary
---
atom_count: 26
bond_count: 25
sum_formula: C6H15O4P
graph6: "Ys_`A?@?P??A?O??_?G?A??O??G??O??O?C??@???G????C???G???G?"
