umol-models-graph/tests/mol_parsing/snapshots/compliance__mol_parsing__store_summary_snapshot@parse_mol_chem3d_cyclohexane.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: summary
---
atom_count: 18
bond_count: 18
sum_formula: C6H12
graph6: QhEKC@?O@?C?C?C?@??O?@??C??
