umol-models-graph/tests/mol_parsing/snapshots/compliance__mol_parsing__store_summary_snapshot@parse_mol_chem3d_trenK.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: summary
---
atom_count: 260
bond_count: 300
sum_formula: C120H108K4N28
graph6: ~?CCkE?H?G?_Bg?O?G?C??_?C??G??O??G??C???_??C???G??????????????????@????C????G????G???@C????_?????G?????_???O@?????@?????G_???@???????@??????C???C??G?O????G?????@C????A?????????G??????@???????@????O??@???????C_????A????????O????????O????????O????????O????????A?????????O????????A?????????G?????_?????????????????????????_?????????G?????????C??????????C?????????A???????????G?????????@???????????G????_??????_?????C????B_?????????G???????????O???????????G???????????C????????????_???????????C????????????G????????????O????????????G????????????C?????????????_????????????C?????????????????????????????@??????????????_?????????????_?????????????@?????????????@???????????????G???A?????????A???????????????_??????????????C????????O??????w?????????????C???????????????O???????????????O???????????????O???????????????C???????????????@????????????????C????????????????O????????????????O????????????????O????????????????C????????????????@?????????????????????????????????????@?????????????????@?????????????????A??????????????????G?????????????????O??????????????????C?????????????????A??????????????????@???????????????????O??????????????????F?????????????????@???????????????????G???????????????????O???????????????????_???????????????????O???????????????????G???????????????????@????????????????????G????????????????????O????????????????????_????????????????????O????????????????????G???G??????????????????????????????????????A?????????????????C??????????????????????????????????????????????????_?????????????????????G?????????????????????@??????????????????????C?????????????????????AG?????????????????????C???????????????????????C??????????????????????@?????????????????????A?G??????????????????@????_??????????????????????P??????????????????????G?????????????????????????_???????????????????????G?????????????????????_?@?A??????????????????????C???????????????????????AG??????????????????????O??????????????????????????C????????????????????????A?????????????????????????G?????????????????????G???_??????????????A?????????H???????????????????????O?????????????????????????G??????????????????????????_?????????????????????????A??????????????????????????G??????????????????????????C??????????????????????????A??????????????????????????@???????????????????????????O??????????????????????C???????????????????????????O???????????????????????????_??????C?????????????????????????????????????????????_???????????????????G?????????????????????????????????????????????????????????????????????????C????????????????????????????G????????????????????????????G????????????????????????????C????????????????????????????P????????????????????????????C??????????????????????????????_????????????????????????????@????????????????????????????O@???????????????????G??????????_????????????????????????????AG????????????????????????????G???????????????????????????????C??????????????????????????????G???????????????????????????C??G?O????????????????????????????C??????????????????????????????P?????????????????????????????O?????????????????????????????????_??????????????????????????????A???????????????????????????????@????????????????????????????G???_??????????@???????????????????@G?????????????????????????????O???????????????????????????????@?????????????????????????????????_????????????????????????????????O????????????????????????????????G?????????????????????????????????_????????????????????????????????A?????????????????????????????????G?????????????????????????????????O?????????????????????????????_?????????????????????????????????G????????????????????????_?????????????????????????????A??????????????????????????????G????????????????????????????????????????????????????????????????????????????????????????????G??????????????????????????????????C??????????????????????????????????@???????????????????????????????????G??????????????????????????????????G_??????????????????????????????????_???????????????????????????????????@????????????????????????????????????_?????????????????????????????????A?G???????????????_???????????????????@???????????????????????????????????@C??????????????????????????????????@??????????????????????????????????????G????????????????????????????????????C??????????????????????????????????_?@???????????????????G?????????????????G????????????????????????????????????G_??????????????????????????????????A???????????????????????????????????????@?????????????????????????????????????@??????????????????????????????????????G??????????????????????????????????O??@???????????A??????????????????????????c???????????????????????????????????A??????????????????????????????????????A???????????????????????????????????????C??????????????????????????????????????@???????????????????????????????????????A???????????????????????????????????????C???????????????????????????????????????G???????????????????????????????????????G???????????????????????????????????G???????????????????????????????????????@?????????A????????????????????????????????????????C????????????????????????????????????????C????????????????????????????????????????A?????????????????????????????????????????????????????????A?????????????????????????????????????????O????????????????????????????????????????@???????????????????????????????????????????????O?????????????????????????????????????????O?????????????????????????????????????????G???????????????????????????????????????????????_?????????????????????????????????????????C??????????????????????????????????????????O??????????_????????????????????????????????????????????????????????????????????????O????????????????????????????????????????????O?????????????????????????????????A???????????????
