umol-models-graph/tests/mol_parsing/snapshots/compliance__mol_parsing__store_summary_snapshot@parse_mol_chembl_CHEMBL1432.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: summary
---
atom_count: 11
bond_count: 11
sum_formula: C7O4
graph6: JiCG_CA@G@?
