umol-models-graph/tests/mol_parsing/snapshots/compliance__mol_parsing__store_summary_snapshot@parse_mol_chembl_CHEMBL8659.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: summary
---
atom_count: 20
bond_count: 19
sum_formula: C18O2
graph6: "S`a@?_C?_A???@???C??@??o?H??__?G?"
